Updated theme info

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Studio Val - FSE
-Theme URI: 
+Theme Name: Boilerplate FSE
+Theme URI: https://github.com/valentin-grenier/boilerplate-fse
 Author: Valentin Grenier • Studio Val
 Author URI: https://studio-val.fr
 Description: A Full Site Editing boilerplate theme created by Valentin Grenier from Studio Val.
