--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ Theme Name: Boilerplate FSE
 Theme URI: https://github.com/valentin-grenier/boilerplate-fse
 Author: Valentin Grenier • Studio Val
 Author URI: https://studio-val.fr
+Version: 1.0.0
 Description: A Full Site Editing boilerplate theme created by Valentin Grenier from Studio Val.
 Requires at least: 6.7
 Tested up to: 6.7
