chore: Replaced text-domain and text_domain by studio-val

--- a/wp-content/themes/theme-fse/style.css
+++ b/wp-content/themes/theme-fse/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Boilerplate FSE
+Theme Name: WP Boilerplate FSE
 Theme URI: https://github.com/valentin-grenier/boilerplate-fse
 Author: Valentin Grenier • Studio Val
 Author URI: https://studio-val.fr
@@ -11,7 +11,7 @@ Requires PHP: 5.7
 Version: 
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: studio-val-fse
+Text Domain: studio-val
 Tags: 
 */
 
