--- a/wp-content/themes/theme-fse/templates/home.html
+++ b/wp-content/themes/theme-fse/templates/home.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group"></main>
+<main class="wp-block-group"><!-- wp:post-content {"align":"full"} /--></main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
